# Aevorex-codes-v2

./: BACKUP_STATUS.md  ECB_ANALYSIS_SUMMARY.md  ECB_DATAFLOW_ANALYSIS.md  FINANCEHUB_MODULARIZATION_REPORT_HU.md  FINANCEHUB_SCALABILITY_STATUS_REPORT_HU.md  PHASE_A_SWEEP_REPORT_v12.md  README.md  RULE_008_COMPLIANCE_CHECKLIST.md  apigw-financehub.yaml  backend_endpoints.txt  base_sha.txt  check_endpoints.py  cloudbuild.yaml  docker-compose.monitoring.yml  docker-compose.redis.yml  docker-compose.yml  endpoint_manifest.json  endpoint_matrix_updated.md  env.local  env.local-E  eslint.config.js  import_fixer.py  lostpixel.config.ts  openapi_real.json  package.json  playwright.config.ts  pnpm-lock.yaml  pnpm-workspace.yaml  poetry.toml  pyproject.toml  requirements.txt  scan_strict.py  tailwind.config.base.js  tsconfig.base.json  tsconfig.json  v16_import_fixer.py  vitest.config.base.ts
.github/: PULL_REQUEST_TEMPLATE.md
audits/: ENDPOINT_DIFF_REPORT 3.md  ENDPOINT_MATRIX_v25_normalized 3.tsv  ENDPOINT_MATRIX_v26.tsv  ENDPOINT_MATRIX_v26B.tsv  ENDPOINT_MATRIX_v26C 3.tsv  ENDPOINT_MATRIX_v27 3.tsv  ENDPOINT_MATRIX_v27C 3.tsv  ENDPOINT_MATRIX_v27E 3.tsv  ENDPOINT_MATRIX_v28_filtered.tsv  ENDPOINT_MATRIX_v6-ultrathink 3.tsv  ENDPOINT_MATRIX_v6.tsv  ENDPOINT_MATRIX_v6R6.tsv  ENDPOINT_MATRIX_v7 3.tsv  ENDPOINT_MATRIX_vFH_Audit 3.tsv  LONG_FILES_BACKEND 3.md  REDUNDANT_FRONTEND.md  backend_router_scan.txt  backend_router_scan_2025-07-11 3.txt  backend_router_scan_2025-07-12 3.txt  backend_router_scan_latest 3.txt  backend_routes_A.txt  backend_routes_A1 3.txt  backend_routes_A1_final 3.txt  backend_routes_A4 3.txt  backend_routes_B1 3.txt  backend_routes_static.txt  be_big_files.txt  endpoint_mapping_analysis 3.md  endpoint_scan_2025-07-10 3.md  endpoint_scan_latest.json  fe_long_files.txt  frontend_api_calls_B1 3.txt  frontend_api_calls_v24.txt  frontend_call_scan_2025-07-12 3.txt  frontend_calls_A1 3.txt  frontend_calls_static.txt  frontend_fetch_A 3.txt  frontend_fetch_A4.txt  frontend_fetch_scan.txt  frontend_fetch_scan_2025-07-11-0101.txt  (+7 more)
docs/: AIHUB_CONVERSION_SUMMARY.md  API_DOCUMENTATION.md  API_RESOURCES.md  ARCHIVE_INTEGRATION_STATUS.md  CHANGELOG_financehub.md  CONTENTHUB_CONVERSION_SUMMARY.md  DEVELOPMENT_STATUS_REPORT.md  ENDPOINT_MATRIX.md  ENDPOINT_MATRIX_AUTO.tsv  ENDPOINT_MATRIX_FULL.md  ENDPOINT_MATRIX_v25.tsv  ENDPOINT_MATRIX_v26.md  ENDPOINT_MATRIX_v28_filtered.md  ENDPOINT_MATRIX_vFH_Audit.md  ENTERPRISE_DATA_VALIDATION_REPORT.md  FE_USAGE_MATRIX_v24.tsv  FE_USAGE_MATRIX_v25.txt  GOOGLE_AUTH_FLOW.md  GOOGLE_AUTH_STATUS.md  MACRO_DEVELOPMENT_GUIDE.md  MACRO_PROGRESS_REPORT.md  MAINPAGE_ENTERPRISE_BLUEPRINT.md  REDUNDANCY_MATRIX_RAW_1.txt  financehub_migration_status.md  frontend_testing.md  openapi.json  tech_stack.md
module_overlays/: financehub.yaml  template.yaml
monitoring/: alertmanager.yml  blackbox.yml  prometheus.yml
patches/: @storybook__preview-api@8.6.14.patch
report/: endpoint_audit_2025-07-10 3.md  endpoint_audit_2025-07-11 3.md
rules/: baseline_rule0.yaml  user_overlays.yaml
(+779 files in other folders)
