[tool.ruff]
src = ["modules/financehub/backend"]
extend-ignore = ["E402", "F841"]

[tool.mypy]
python_version = "3.11"
mypy_path = "modules/financehub/backend"
ignore_missing_imports = true

[tool.setuptools]
py-modules = []

[tool.setuptools.packages]
find = {} 

[tool.poetry]
name = "aevorex-financehub"
version = "1.0.0"
description = "Enterprise-grade financial analysis backend and frontend."
authors = ["AEVOREX Team <contact@aevorex.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.11,<3.14"  # Allow 3.13 local dev until upstream resolves
fastapi = "0.109.2"
# Pin uvicorn to 0.22.0 – includes legacy "uvicorn.loops.auto" module needed when spawning workers under Python 3.13
uvicorn = {extras = ["standard"], version = "0.22.0"}
pydantic = "^2.6.4"
pydantic-settings = "^2.2.1"
redis = {extras = ["hiredis"], version = "4.6.0"}
# httpx with ASGITransport requires the http2 extra in 0.26.x
httpx = "0.25.2"

# Ensure Starlette stays on the stable series compatible with FastAPI 0.110
starlette = "0.36.3"
pandas = "^2.2.1"
openpyxl = "^3.1.2"
python-dotenv = "^1.0.1"
requests = "^2.31.0"
beautifulsoup4 = "^4.12.3"
lxml = "^5.2.1"
google-auth = "^2.29.0"
google-auth-oauthlib = "^1.2.0"
requests-oauthlib = "^2.0.0"
# uvloop = "^0.19.0"
tenacity = "^8.2.3"
aiocache = {extras = ["redis"], version = "^0.12.2"}
# ta-lib-pure = "^0.4.0"
numpy = "<2.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.1.1"
pytest-asyncio = "^0.23.6"
black = "^24.4.2"
ruff = "^0.4.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
pythonpath = [
  "."
] 